# skeleton-tool

./: 404.html  LICENSE  README.md  README_cli.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml
docs/: index.md
docs/reference/: bar.md  index.md
docs/tutorial/: login.md  shoot.md
docs/tutorial/subsection/: testa.md
reference/: index.html
reference/bar/: index.html
search/: search_index.json
skeleton_tool/: __main__.py  main.py
skeleton_tool/foo/: bar.py
tests/: test_main.py
tutorial/: index.html
tutorial/config/: index.html
tutorial/login/: index.html
tutorial/shoot/: index.html
tutorial/subsection/testa/: index.html
tutorial/subsection/testb/: index.html
