[project]
name = "skeleton-tool"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "estorrs", email = "epstorrs@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[project.optional-dependencies]
docs = ["griffe-typingdoc==0.2.2"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["skeleton_tool"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
skeleton-tool = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=1.26.4,<1.27"
scikit-image = ">=0.22.0,<0.23"
typer = ">=0.12.3,<0.13"
typing_extensions = ">=4.12.1,<4.13"
toml = ">=0.10.2,<0.11"

[tool.pixi.feature.docs.tasks]
serve = { cmd="mkdocs serve" }
deploy = { cmd="mkdocs gh-deploy --force" }

[tool.pixi.feature.docs.dependencies]
mkdocs-material = ">=9.5.24,<9.6"
mkdocs = "1.6.0"
mkdocstrings-python = "1.10.3"
pyyaml = ">=5.3.1,<7.0.0"
pillow = "10.3.0"
cairosvg = "2.7.0"

[tool.pixi.feature.test.tasks]
test = { cmd="pytest" }

[tool.pixi.feature.test.dependencies]
pytest = "8.2.1"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

[project.scripts]
skeleton-tool = "skeleton_tool.main:app"

